# PD_Knapsack-SequenceAlignment

./: .gitignore  README.md
app/: __init__.py  routes.py  weightedIntervalScheduling.py
maior-subsequencia-crescente-master/: scripts.js  site.html
maior-subsequencia-crescente-master/assets/: styles.css
static/: script.py  styles.css
templates/: index.html
weighted-interval-scheduling/: pyproject.toml
weighted-interval-scheduling/app/: __init__.py  routes.py  weightedIntervalScheduling.py
weighted-interval-scheduling/static/: script.py  styles.css
weighted-interval-scheduling/templates/: index.html
