[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
fastapi = "^0.104.1"
jinja2 = "^3.1.2"
aiofiles = "^23.2.1"
browser = "^66.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
